[gd_scene load_steps=17 format=3 uid="uid://s27i8wyh7dc5"]

[ext_resource type="StyleBox" uid="uid://db2rsd8ficf4o" path="res://resources/betterwindow.tres" id="1_bhec6"]
[ext_resource type="Script" path="res://scenes/windows/aula_select/aula_select.gd" id="2_p51n7"]
[ext_resource type="FontFile" uid="uid://cpmmo07pbocsh" path="res://fonts/Vermin Vibes 1989.ttf" id="4_s8qgw"]
[ext_resource type="StyleBox" uid="uid://cqwcpaf5fy6a7" path="res://resources/button.tres" id="5_bg00j"]
[ext_resource type="FontFile" uid="uid://caq3b34gdt0oj" path="res://fonts/Comfortaa-VariableFont_wght.ttf" id="6_j5qlh"]
[ext_resource type="Texture2D" uid="uid://bs0ok80xfyuid" path="res://sprites/maxthelogo.png" id="7_8sh5w"]
[ext_resource type="Script" path="res://scenes/Aulas/button_manager.gd" id="8_m3lmx"]
[ext_resource type="StyleBox" uid="uid://djpqbyxyro8sk" path="res://resources/invisible.tres" id="9_ikgq1"]
[ext_resource type="AudioStream" uid="uid://cn8sj2ajke2r6" path="res://audio/close.wav" id="10_ejyx7"]

[sub_resource type="LabelSettings" id="LabelSettings_2xelb"]
font = ExtResource("4_s8qgw")
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgnvq"]
bg_color = Color(0.064075, 0.0793855, 0.122807, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="LabelSettings" id="LabelSettings_wrkym"]
font = ExtResource("4_s8qgw")

[sub_resource type="LabelSettings" id="LabelSettings_dbcny"]
font = ExtResource("4_s8qgw")

[sub_resource type="LabelSettings" id="LabelSettings_60y8t"]
font = ExtResource("4_s8qgw")

[sub_resource type="LabelSettings" id="LabelSettings_wvchx"]
font = ExtResource("6_j5qlh")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1vxdf"]
bg_color = Color(0.0935537, 0.113284, 0.167523, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[node name="aula_select" type="Panel"]
custom_minimum_size = Vector2(217, 115)
offset_left = 104.0
offset_right = 321.0
offset_bottom = 115.0
scale = Vector2(3, 3)
theme_override_styles/panel = ExtResource("1_bhec6")
script = ExtResource("2_p51n7")

[node name="windowname" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.8445
offset_top = 2.0
offset_right = 83.1555
offset_bottom = 16.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
text = "class manager"
label_settings = SubResource("LabelSettings_2xelb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="aula" type="Button" parent="."]
custom_minimum_size = Vector2(90, 40)
layout_mode = 0
offset_left = 4.43718
offset_top = 70.6668
offset_right = 94.4372
offset_bottom = 110.667
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("4_s8qgw")
theme_override_font_sizes/font_size = 0
theme_override_styles/hover = ExtResource("5_bg00j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sgnvq")
theme_override_styles/normal = ExtResource("5_bg00j")
text = "Cubigor"

[node name="recentes" type="Label" parent="."]
layout_mode = 0
offset_left = 3.96539
offset_top = 65.0
offset_right = 81.9654
offset_bottom = 79.0
scale = Vector2(0.25, 0.25)
text = "Recentes:"
label_settings = SubResource("LabelSettings_wrkym")
horizontal_alignment = 1
vertical_alignment = 1

[node name="selecione" type="Label" parent="."]
layout_mode = 0
offset_left = 3.96539
offset_top = 11.6667
offset_right = 81.9654
offset_bottom = 25.6667
scale = Vector2(0.25, 0.25)
text = "Selecione:"
label_settings = SubResource("LabelSettings_dbcny")
horizontal_alignment = 1
vertical_alignment = 1

[node name="body_text" type="Label" parent="."]
layout_mode = 0
offset_left = 31.2305
offset_top = 11.3334
offset_right = 80.2305
offset_bottom = 25.3334
scale = Vector2(0.5, 0.5)
text = "Selecione a aula"
label_settings = SubResource("LabelSettings_60y8t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="body_text2" type="Label" parent="body_text"]
layout_mode = 0
offset_left = 69.518
offset_top = 21.3334
offset_right = 627.518
offset_bottom = 181.333
scale = Vector2(0.5, 0.5)
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim aeque doleamus animo, cum corpore dolemus, fieri tamen permagna accessio potest, si aliquod aeternum et infinitum impendere malum nobis opinemur. Quod idem licet transferre in voluptatem."
label_settings = SubResource("LabelSettings_wvchx")
autowrap_mode = 2

[node name="body_text" type="Label" parent="body_text"]
layout_mode = 0
offset_left = -3.0
offset_top = 86.0
offset_right = 736.0
offset_bottom = 435.0
scale = Vector2(0.5, 0.5)
text = "
Ullus investigandi veri, nisi inveneris, et quaerendi defatigatio turpis est, cum esset accusata et vituperata ab Hortensio. Qui liber cum et mortem contemnit, qua qui est imbutus quietus esse numquam potest. Praeterea bona praeterita grata recordatione renovata delectant. Est autem situm in nobis ut et voluptates et dolores nasci fatemur e.
"
label_settings = SubResource("LabelSettings_wvchx")
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="body_text"]
layout_mode = 0
offset_left = 2.0
offset_top = 23.0
offset_right = 67.0
offset_bottom = 85.0
texture = ExtResource("7_8sh5w")
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 4.43718
offset_top = 16.0001
offset_right = 94.4372
offset_bottom = 232.0
scale = Vector2(0.2, 0.2)
script = ExtResource("8_m3lmx")
metadata/_edit_group_ = true

[node name="aula1" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_s8qgw")
theme_override_styles/hover = ExtResource("5_bg00j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sgnvq")
theme_override_styles/normal = ExtResource("5_bg00j")
text = "Aula 1"

[node name="aula2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_s8qgw")
theme_override_styles/hover = ExtResource("5_bg00j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sgnvq")
theme_override_styles/normal = ExtResource("5_bg00j")
text = "Aula 2"

[node name="aula3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_s8qgw")
theme_override_styles/hover = ExtResource("5_bg00j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sgnvq")
theme_override_styles/normal = ExtResource("5_bg00j")
text = "Aula 3"

[node name="aula4" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_s8qgw")
theme_override_styles/hover = ExtResource("5_bg00j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sgnvq")
theme_override_styles/normal = ExtResource("5_bg00j")
text = "Aula 4"

[node name="aula5" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(90, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_s8qgw")
theme_override_styles/hover = ExtResource("5_bg00j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sgnvq")
theme_override_styles/normal = ExtResource("5_bg00j")
text = "Aula 5"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -17.7678
offset_top = 2.33345
offset_right = -0.767838
offset_bottom = 9.33345
grow_horizontal = 0
theme_override_constants/separation = 2
metadata/_edit_group_ = true

[node name="maximize" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(7, 7)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = ExtResource("9_ikgq1")
theme_override_styles/pressed = ExtResource("9_ikgq1")
theme_override_styles/normal = ExtResource("9_ikgq1")

[node name="close" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(7, 7)
layout_mode = 2
focus_mode = 0
theme_override_styles/hover = ExtResource("9_ikgq1")
theme_override_styles/pressed = ExtResource("9_ikgq1")
theme_override_styles/normal = ExtResource("9_ikgq1")

[node name="draghandle" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -105.5
offset_right = 88.5
offset_bottom = 10.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("9_ikgq1")

[node name="separator" type="Panel" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 61.0
offset_right = 27.0
offset_bottom = 82.0
rotation = 1.5708
theme_override_styles/panel = SubResource("StyleBoxFlat_1vxdf")

[node name="separator2" type="Panel" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 11.0
offset_right = 29.0
offset_bottom = 112.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1vxdf")

[node name="close_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ejyx7")

[connection signal="pressed" from="VBoxContainer/aula1" to="VBoxContainer" method="_on_aula_1_pressed"]
